--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,18 +1,18 @@
 name: Generate terraform docs
-on:
-  - pull_request
+on: [pull_request]
 jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
+    - uses: actions/checkout@v3
+      with:
+        ref: ${{ github.head_ref }}
 
-      - name: Render terraform docs inside the README.md and push changes back to PR branch
-        uses: DNXLabs/terraform-docs@v1.0.0
-        with:
-          tf_docs_working_dir: .
-          tf_docs_output_file: README.md
-          tf_docs_output_method: inject
-          tf_docs_git_push: 'true'
+    - name: Render terraform docs and push changes back to main
+      uses: terraform-docs/gh-actions@main
+      with:
+        working-dir: .
+        output-file: README.md
+        output-method: inject
+        git-push: "true"
+        git-commit-message: "Auto generate Terraform docs commit"
