--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
       image: hashicorp/terraform:latest
     steps:
       - uses: actions/checkout@master
-      - run: terraform fmt --recursive -check=true
+      - run: terraform fmt --recursive
 
   validate:
     name: Validate
@@ -46,18 +46,3 @@ jobs:
             terraform validate
             cd -
           done
-  minimum:
-    name: Minimum version check
-    runs-on: ubuntu-latest
-    container:
-      image: hashicorp/terraform:1.3.0
-    steps:
-      - uses: actions/checkout@master
-      - name: Validate Code
-        env:
-          AWS_REGION: 'us-east-1'
-          TF_WARN_OUTPUT_ERRORS: 1
-        run: |
-          sed -i -e 's/>=/=/' -e 's/ \(\d\+\.\d\+\)"/ \1.0"/' versions.tf
-          terraform init
-          terraform validate 
